5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1595_2894.log
== TEST (2019-03-21 17:45:00) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:46:36) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8+45))

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:49:06) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(45.(x.8)))

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    var = float(input(45.(x.8)))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:49:49) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(x.8+45)

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    var = float(input(x.8+45)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:50:13) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.x+45)

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    var = float(input(8.x+45)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:23:20) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = 360
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:23:28) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = 360
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:24:43) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(360)
-- ERROR:
File "XXXX", line 8
    total = 360
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:24:51) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(360)
-- ERROR:
File "XXXX", line 8
    total = 360
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:24:53) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = 360

# Impressao do valor total:
print(360)
-- EXECUTION TIME:
0.137966
-- ERROR:
  File "/home/codebench/codes/1595/2894/main.py", line 8
    total = 360
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:38:20) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8."x"+45)

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 5
    var = float(input(8."x"+45)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:38:30) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 8
    total = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:41:12) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = float(350)

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 8
    total = float(350)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:41:54) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print()
-- OUTPUT:
350
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:42:10) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(350)
-- EXECUTION TIME:
0.19717
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
350350
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
350350
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
350350
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:42:11) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(350)
-- OUTPUT:
350350
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:42:13) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(350)
-- EXECUTION TIME:
0.139949
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
350350
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
350350
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
350350
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:43:19) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = var = input(350)

# Impressao do valor total:
print(350)
-- OUTPUT:
350350
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:43:22) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = var = input(350)

# Impressao do valor total:
print(350)
-- EXECUTION TIME:
0.155035
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
350350
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
350350
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
350350
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:43:23) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = var = input(350)

# Impressao do valor total:
print(350)
-- OUTPUT:
350350
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:44:31) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print()
-- OUTPUT:
350
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:45:10) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350.0)

# Impressao do valor total:
print()
-- OUTPUT:
350.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:45:12) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350.0)

# Impressao do valor total:
print()
-- EXECUTION TIME:
0.148972
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
350.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
350.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
350.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:45:13) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350.0)

# Impressao do valor total:
print()
-- EXECUTION TIME:
0.199799
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
350.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
350.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
350.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:45:44) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(8.45)
-- OUTPUT:
3508.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:45:46) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(8.45)
-- EXECUTION TIME:
0.138945
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
3508.45
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3508.45
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
3508.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:45:47) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(8.45)
-- EXECUTION TIME:
0.206331
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
3508.45
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3508.45
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
3508.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:57:51) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(8.45)
-- OUTPUT:
3508.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:57:53) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(350)

# Impressao do valor total:
print(8.45)
-- EXECUTION TIME:
0.193485
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
3508.45
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
3508.45
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
3508.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:58:45) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = float(350)

# Impressao do valor total:
print(8.45)
-- OUTPUT:
8.458.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:58:55) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = float(350)

# Impressao do valor total:
print(8.45)
-- EXECUTION TIME:
0.172347
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
8.458.45
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
8.458.45
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
8.458.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:58:58) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = float(350)

# Impressao do valor total:
print()
-- EXECUTION TIME:
0.16243
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
8.45
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
8.45
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
8.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:58:59) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = input(8.45)

# Calculo do valor a ser pago, incluindo o frete:
total = float(350)

# Impressao do valor total:
print()
-- OUTPUT:
8.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:00:02) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(350)

# Calculo do valor a ser pago, incluindo o frete:
total = input(8.45)

# Impressao do valor total:
print()
-- OUTPUT:
8.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:04:36) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(45)

# Calculo do valor a ser pago, incluindo o frete:
total = input(8)

# Impressao do valor total:
print()
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:04:41) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(45)

# Calculo do valor a ser pago, incluindo o frete:
total = input()

# Impressao do valor total:
print()
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:59:38) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:59:40) 
-- CODE:
#var=imput ("Este código é apenas um ESBOÇO da solução").
#imput (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.226632
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
